@@ -1,21 +1,22 @@
 package roomescape.business.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import roomescape.dto.response.MemberResponse;
-import roomescape.infrastructure.db.MemberJpaRepository;
+import roomescape.persistence.MemberRepository;
 
 @Service
+@Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class MemberService {
 
-    private final MemberJpaRepository memberJpaRepository;
+    private final MemberRepository memberRepository;
 
     public List<MemberResponse> findAll() {
-        return memberJpaRepository.findAll().stream()
-                .map(MemberResponse::from)
-                .collect(Collectors.toList());
+        return memberRepository.findAll().stream()
+            .map(MemberResponse::from)
+            .toList();
     }
 }
